Final Html File

--- a/index.html
+++ b/index.html
@@ -2,35 +2,37 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>Skeleton Webpage</title>
+		<!--link to css file-->
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 	<!--Header of the page-->
 		<header>
-			
+			<h1>Header</h1>
 		</header>
 	<!--Navigation Section of the page-->
 		<nav>
-			
+			<h2>Nav</h2>
 		</nav>
 			<section>
 				<!--Article section located on the right of the page with header and paragraphs-->
+				<h2>Section</h2>
 				<article>
-					<h1></h1>
-					<h2></h2>
-					<h3></h3>
-					<p></p>
+					<h2>article</h2>
+					<h2 class="genericSquare">h2</h2>
+					<p class="genericSquare">p</p>
 				</article>
 			</section>
 			<div>
 			<<!--Text Block located on the left of the screen-->
 				<aside>
-					
+					<h2>aside</h2>
 				</aside>
 			</div>
 		<!--Footer of the page-->
 		<footer>
-			
+			<h2>footer</h2>
 		</footer>
 	</body>
 </html>
